--- a/assets/php/settings/templates/templates-logs_path.html
+++ b/assets/php/settings/templates/templates-logs_path.html
@@ -7,7 +7,7 @@
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="path_input_icon" title="Path of log"></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="path_input_icon" title="Path of log file."></i>
 
         </label>
 
@@ -20,6 +20,8 @@
         </p>
 
         {{/if}}
+		
+		<p id="pathsettingnote"> <i class="fas fa-info-triangle"> </i>  Can be dynamic - see <a class='footer pathsettingnotelink' href='https://github.com/Monitorr/logarr/wiki/Settings#dynamic-paths' target='_blank' title="Logarr Wiki">wiki</a> </p>
 
     </div>
 
