--- a/assets/php/settings/templates/authentication/templates-authentication_logsenabled.html
+++ b/assets/php/settings/templates/authentication/templates-authentication_logsenabled.html
@@ -1,13 +1,13 @@
 <script type="text/x-handlebars-template">
 
-    <div id="updatebranch" class="form-group">
+    <div id="logsenabled" class="form-group">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label updatebranchlabel" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label logsenabledlabel" for="{{id}}">
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="updatebranch_icon" title="Logarr repo branch to use when updating."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="logsenabled_icon" title="Enable authentication for the main Logarr UI."> </i>
 
         </label>
 
@@ -23,4 +23,5 @@
         {{/if}}
 
     </div>
+
 </script>
