--- a/assets/php/settings/templates/settings/templates-settings_livesearch.html
+++ b/assets/php/settings/templates/settings/templates-settings_livesearch.html
@@ -1,13 +1,13 @@
 <script type="text/x-handlebars-template">
 
-    <div id="updatebranch" class="form-group">
+    <div id="livesearch" class="form-group">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label updatebranchlabel" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label livesearchlabel" for="{{id}}">
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="updatebranch_icon" title="Logarr repo branch to use when updating."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="livesearch_icon" title="Automatically highlight terms when typing in the Search input field."> </i>
 
         </label>
 
@@ -23,4 +23,5 @@
         {{/if}}
 
     </div>
+
 </script>
