--- a/assets/php/settings/templates/settings/templates-settings_rflog.html
+++ b/assets/php/settings/templates/settings/templates-settings_rflog.html
@@ -1,13 +1,13 @@
 <script type="text/x-handlebars-template">
 
-    <div id="updatebranch" class="form-group">
+    <div id="rflog_input" class="form-group">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label updatebranchlabel" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label rflog_inputlabel" for="{{id}}">
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="updatebranch_icon" title="Logarr repo branch to use when updating."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="rflog_input_icon" title="Log refresh interval in milliseconds."> </i>
 
         </label>
 
@@ -23,4 +23,5 @@
         {{/if}}
 
     </div>
+
 </script>
