--- a/assets/php/settings/templates/templates-logs_autoRollSize.html
+++ b/assets/php/settings/templates/templates-logs_autoRollSize.html
@@ -7,7 +7,7 @@
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="autoRollSize_input_icon" title="Auto roll log when filesize is bigger than this value."></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="autoRollSize_input_icon" title="Auto roll log when filesize is equal or larger than this value."></i>
 
         </label>
         
