--- a/assets/php/settings/templates/templates-logs_category.html
+++ b/assets/php/settings/templates/templates-logs_category.html
@@ -7,7 +7,7 @@
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="category_input_icon" title="Category of log."></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="category_input_icon" title="Category of the log which is used for filtering on the main Logarr UI."></i>
 
         </label>
         
