--- a/assets/php/settings/templates/templates-logs_title.html
+++ b/assets/php/settings/templates/templates-logs_title.html
@@ -3,11 +3,11 @@
     <div id="title_input">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label title_input-label" for="{{id}}">
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="title_input_icon" title="Title of log. NOTE: For optimal appearance, ‘Service Title’ should be no more than than 20 characters in length, and no more than 10 consecutive characters without a space."></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="title_input_icon" title="Title of log (20 characters max)."></i>
 
         </label>
         
