--- a/assets/php/settings/templates/templates-user-preferences_timezone.html
+++ b/assets/php/settings/templates/templates-user-preferences_timezone.html
@@ -3,7 +3,7 @@
     <div id="timezone" class="form-group">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label timezonelabel" for="{{id}}">
 
             {{{options.label}}}
 
