--- a/assets/php/settings/templates/templates-user-preferences_title.html
+++ b/assets/php/settings/templates/templates-user-preferences_title.html
@@ -3,11 +3,11 @@
     <div id="site_title_input" class="form-group">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label sitetitlelabel" for="{{id}}">
             
             {{{options.label}}} 
         
-            <i class="fa fa-fw fa-question-circle input_icon" id="site_title_input_icon" title="Text that is displayed in the top header. (15 characters max)"> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="site_title_input_icon" title="Text that is displayed in the top header. (12 characters max)"> </i>
         
         </label>
 
