--- a/assets/php/settings/templates/templates-user-preferences_url.html
+++ b/assets/php/settings/templates/templates-user-preferences_url.html
@@ -3,11 +3,11 @@
     <div id="site_url_input" class="form-group">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label siteurllabel" for="{{id}}">
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="site_url_input_icon" title="URL of the Monitorr UI."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="site_url_input_icon" title="URL of the Logarr UI."> </i>
 
         </label>
 
