--- a/assets/php/settings/templates/templates-logs_path.html
+++ b/assets/php/settings/templates/templates-logs_path.html
@@ -7,7 +7,7 @@
             
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="path_input_icon" title="Path of log file."></i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="path_input_icon" title="Absolute or relative path to the log file."></i>
 
         </label>
 
