--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -10,7 +10,7 @@ body {
     -webkit-font-smoothing: antialiased;
     font-family: 'Roboto:400', sans-serif !important;
     color: #FFFFFF;
-    margin-bottom: 6rem;
+    /* margin-bottom: 6rem; */
     padding: 10px 10px 0;
 }
 
@@ -76,13 +76,16 @@ body::-webkit-scrollbar-thumb {
     box-shadow: 5px 5px 10px black;
 }
 
-
 input[type=text]::-webkit-search-cancel-button {
     -webkit-appearance: searchfield-cancel-button;
 }
 
 input[type=radio] {
     cursor: pointer;
+}
+
+.cursorwait {
+    cursor: progress !important;
 }
 
 /* SCROLL BARS */
@@ -192,6 +195,16 @@ h6,
     width: 100%;
     table-layout: fixed;
     margin-top: 1vw;
+}
+
+.header-login {
+    display: flex;
+    width: 24em;
+    table-layout: fixed;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 3vh;
 }
 
 .header-brand {
@@ -1114,7 +1127,9 @@ input[type="checkbox"] {
 }
 
 #settings-frame-wrapper {
-    margin: 2vw;
+    margin-top: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
     margin-bottom: 0;
     overflow-y: auto;
     overflow-x: hidden;
@@ -1313,6 +1328,10 @@ ul.nav.sidebar-nav > li > a > i {
     border-color: orange;
 }
 
+.modalimage {
+    color: pink;
+}
+
 .toastlink {
     color: white;
 }
@@ -1494,6 +1513,17 @@ input[name="imginput"]:focus {
     background-color: transparent;
 }
 
+#logincolumn {
+    position: fixed;
+    float: left;
+    text-align: left;
+    vertical-align: middle;
+    /* width: 40%; */
+    margin-left: 1em;
+    padding-bottom: 0;
+    top: 15vh;        
+}
+
 #settingsbrand {
     /* max-width: 17em; */
     width: 100%;
@@ -1527,6 +1557,13 @@ input[name="imginput"]:focus {
     text-align: center;
 }
 
+.vcheckerror {
+    color: red;
+    font-size: 1rem;
+    font-weight: 600;
+    text-align: center;
+}
+
 #footer > p {
     text-align: center;
 }
@@ -1546,7 +1583,8 @@ input[name="imginput"]:focus {
 .object {
     float: right;
     width: 100%;
-    height: 58rem;
+    /* height: 58rem; */
+    height: 85vh;
 }
 
 #version_check {
@@ -1940,12 +1978,17 @@ div[data-alpaca-container-item-name="maxLines"], div[data-alpaca-container-item-
 }
 
 #login-container {
+    position: fixed;
+    margin: 0 auto;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
     background-color: transparent;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
     /* change me: */
-    margin-top: -5vh;
+    margin-top: 20vh;
 }
 
 #loginbrand {
@@ -1998,6 +2041,7 @@ div[data-alpaca-container-item-name="maxLines"], div[data-alpaca-container-item-
 #login-form > div {
     margin: 1rem auto;
     text-align: center;
+    white-space: nowrap;
 }
 
 #loginbtn > button {
@@ -2120,6 +2164,10 @@ h2.heading {
     }
 
     #left {
+        display: none;
+    }
+
+    #logincolumn {
         display: none;
     }
 
@@ -2270,6 +2318,7 @@ object {
 #releaseWrapper {
     max-width: 100rem;
     margin: auto;
+    margin-bottom: 3rem;
     background-color: #3d3d3d;
 }
 
