--- a/assets/data/custom.css
+++ b/assets/data/custom.css
@@ -1,7 +1,7 @@
 /*** Logarr CUSTOM CSS ***/
 
-/* NOTE: See wiki for detailed instructions/examples.
-	+ After applying custom CSS, clearing browser cache and reloading the Logarr UI may be necessary.
-*/
+/* NOTE: See wiki for detailed instructions/examples. */
+/* After applying custom CSS, clearing browser cache and reloading the Logarr UI may be necessary. */
+
 
 /* add custom CSS below this line */
